# ephemeral-pg

./: .gitignore  CHANGELOG.md  Justfile  LICENSE  README.md  cabal.project  ephemeral-pg.cabal  flake.nix  mori.dhall
.seihou/: manifest.json
docs/: migrating-from-tmp-postgres.md  suite-template-databases.md
docs/plans/: 1-evaluate-adding-opentelemetry-instrumentation-to-ephemeral-pg.md  2-wire-config-stdout-and-config-stderr-to-the-postgres-process.md
ephemeral-pg-opentelemetry/: ephemeral-pg-opentelemetry.cabal
ephemeral-pg-opentelemetry/src/OpenTelemetry/Instrumentation/: EphemeralPg.hs
ephemeral-pg-opentelemetry/test/: Demo.hs  Spec.hs
mori/: repo-id
src/: EphemeralPg.hs
src/EphemeralPg/: Config.hs  Database.hs  Dump.hs  Error.hs  Process.hs  Snapshot.hs
src/EphemeralPg/Internal/: Cache.hs  CopyOnWrite.hs  Directory.hs  Except.hs  Port.hs
src/EphemeralPg/Process/: CreateDb.hs  InitDb.hs  Postgres.hs
test/: Main.hs
