cabal-version: 3.0
name: ephemeral-pg
version: 0.1.0.0
synopsis: Temporary PostgreSQL databases for testing
description:
  A modern library for creating temporary PostgreSQL instances for testing.
  Features include initdb caching, copy-on-write support, and native hasql integration.

license: BSD-3-Clause
license-file: LICENSE
author: Your Name
maintainer: your.email@example.com
category: Database, Testing
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/yourusername/ephemeral-pg

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

library
  import: warnings
  default-language: GHC2021
  hs-source-dirs: src
  exposed-modules:
    EphemeralPg
    EphemeralPg.Config
    EphemeralPg.Database
    EphemeralPg.Dump
    EphemeralPg.Error
    EphemeralPg.Snapshot

  other-modules:
    EphemeralPg.Internal.Cache
    EphemeralPg.Internal.CopyOnWrite
    EphemeralPg.Internal.Directory
    EphemeralPg.Internal.Port
    EphemeralPg.Process
    EphemeralPg.Process.CreateDb
    EphemeralPg.Process.InitDb
    EphemeralPg.Process.Postgres

  build-depends:
    base >=4.18 && <5,
    bytestring >=0.11 && <0.13,
    directory >=1.3 && <1.4,
    filepath >=1.4 && <1.6,
    hashable >=1.4 && <1.6,
    hasql >=1.10,
    network >=3.1 && <3.3,
    process >=1.6 && <1.8,
    temporary >=1.3 && <1.4,
    text >=2.0 && <2.2,
    typed-process >=0.2.12 && <0.3,
    unix >=2.8 && <2.9,

  default-extensions:
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    RecordWildCards
    StrictData

test-suite ephemeral-pg-test
  import: warnings
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    QuickCheck >=2.14 && <2.16,
    base,
    ephemeral-pg,
    hasql,
    hspec >=2.11 && <2.12,
    text,

  default-extensions:
    BlockArguments
    OverloadedStrings
