cabal-version: 3.0
name: ephemeral-pg-opentelemetry
version: 0.1.0.0
synopsis: OpenTelemetry tracing for ephemeral-pg
description:
  OpenTelemetry tracing wrappers around the ephemeral-pg lifecycle. Drop-in
  replacements for @EphemeralPg.with@, @start@, @stop@, and @restart@ that
  emit a span tree under the calling test span (e.g. one created by
  @hs-opentelemetry-instrumentation-hspec@). Errors are recorded as
  @SpanStatus.Error@ with a constructor-name @error.type@ attribute.

license: BSD-3-Clause
license-file: ../LICENSE
author: Nadeem Bitar
maintainer: nadeem@gmail.com
category: Database, Observability, Testing
build-type: Simple

source-repository head
  type: git
  location: https://github.com/shinzui/ephemeral-pg

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wunused-packages

library
  import: warnings
  default-language: GHC2021
  hs-source-dirs: src
  exposed-modules:
    OpenTelemetry.Instrumentation.EphemeralPg

  build-depends:
    base >=4.18 && <5,
    ephemeral-pg,
    hs-opentelemetry-api >=0.3 && <0.4,
    text >=2.0 && <2.2,

  default-extensions:
    BlockArguments
    LambdaCase
    OverloadedStrings
    TemplateHaskell

test-suite ephemeral-pg-opentelemetry-demo
  import: warnings
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Demo.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base,
    ephemeral-pg-opentelemetry,
    hs-opentelemetry-api,
    hs-opentelemetry-exporter-handle,
    hs-opentelemetry-instrumentation-hspec,
    hs-opentelemetry-sdk,
    hspec >=2.11 && <2.12,
    text,
    unliftio,

  default-extensions:
    BlockArguments
    LambdaCase
    OverloadedStrings
